// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor component should render Body Editor correctly 1`] = `
<Editor
  apiKey="zre5x72iyosuc7o3z1vg6lfbkxwdw4b5lr9yrwpgjsnfsca7"
  init={
    Object {
      "content_css": Array [
        "//fonts.googleapis.com/css?family=Frank+Ruhl+Libre:300,400,500,700",
      ],
      "inline": true,
      "menubar": false,
      "plugins": Array [
        "link",
        "textcolor",
        "lists",
        "powerpaste",
        "linkchecker",
        "contextmenu",
        "autolink",
        "tinymcespellchecker",
      ],
      "powerpaste_html_import": "clean",
      "powerpaste_word_import": "clean",
      "toolbar": Array [
        "undo redo | bold italic underline | fontselect fontsizeselect",
        "forecolor backcolor | alignleft aligncenter alignjustify
            alignright alignfull| numlist bullist outdent indent",
      ],
      "valid_elements": "p[style],strong,em,span[style],a[href],ul,ol,li",
      "valid_styles": Object {
        "*": "font-size,font-family,color,text-decoration,text-align",
      },
    }
  }
/>
`;

exports[`Editor component should render Title Editor correctly 1`] = `
<Editor
  apiKey="zre5x72iyosuc7o3z1vg6lfbkxwdw4b5lr9yrwpgjsnfsca7"
  init={
    Object {
      "content_css": Array [
        "//fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i",
      ],
      "inline": true,
      "menubar": false,
      "plugins": Array [
        "textcolor",
        "lists",
        "powerpaste",
        "linkchecker",
        "contextmenu",
        "autolink",
      ],
      "powerpaste_html_import": "clean",
      "powerpaste_word_import": "clean",
      "toolbar": "undo redo | bold italic underline",
      "valid_elements": "strong,em,span[style],a[href]",
      "valid_styles": Object {
        "*": "font-size,font-family,color,text-decoration,text-align",
      },
    }
  }
  name="title-editor"
  tagName="h1"
/>
`;
